# ddpa_htr

./: LICENSE  README.md  alphabet.py  character_classes.py  charters.py  htr_model.py  inferlib.py  logging_utils.py  metrics.py  model_htr.py  pyproject.toml  requirements.txt  resnet_from_scratch.py  seglib.py  transforms.py
data/: README.md  current_working_set  koenigsfelden_1308-1622.json  koenigsfelden_1308-1622_abbrev.json  monasterium_teklia.json  nuremberg_letterbooks.json
data/FourHeadDataset/: recipe.py
data/MonasteriumTeklia/: README.md
doc/: index.rst  segmentation_dict_example.json
doc/_static/: custom.css  workflow.dia
kraken/: layers.py  vgsl.py
libs/: alphabet.py  character_classes.py  charter_htr_datasets.py  charter_page_ds.py  charters.py  charters_ds.py  charters_htr.py  download_utils.py  htr_dataset.py  htr_datasets.py  htr_model.py  list_utils.py  maskutils.py  metrics.py  seglib.py  transforms.py  utils.py  visuals.py
models/htr/: Tridis_Medieval_EarlyModern.mlmodel.REMOVED.git-id  default.mlmodel  metadata_utf8.json
notebooks/: gt_alignment.ipynb
tests/: test_alphabet.py  test_htr_model.py  test_inferlib.py  test_vgsl.py
tests/data/: alphabet_one_to_one_repr_with_nullchar.tsv  alphabet_one_to_one_repr_without_nullchar.tsv
tests/data/bbox/: alphabet.tsv  monasterium_ds_test.tsv  monasterium_ds_train.tsv  monasterium_ds_train_mini.tsv  monasterium_ds_validate.tsv
tests/data/toydataset/: README.md  monasterium_ds.tsv
